# secure-tools

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: 1password-setup.md  quickstart.md
secure_tools/: __init__.py  config.py  main.py  orchestrator.py  secrets_broker.py
secure_tools/tool_configs/: __init__.py  tools.yml
secure_tools/tools/: __init__.py  executors.py  loader.py  setup.py
src/: main.py  orchestrator.py  secrets_broker.py
tests/: __init__.py  test_loader.py  test_orchestrator.py  test_secrets_broker.py  test_tools.py
