[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-tools"
version = "0.1.0"
description = "Secure Tool Runner - Secure LLM tool execution with 1Password"
readme = "readme.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Riyad Khan"}
]
keywords = ["llm", "ollama", "1password", "security", "agent", "tools"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "bandit[toml]>=1.8.0",
    "safety>=3.7.0",
]

[project.scripts]
secure-tools = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "S101",   # assert statements (fine in tests)
    "S603",   # subprocess without shell=True (intentional)
    "S607",   # partial path to executable (we use full paths)
    "W293",   # blank line contains whitespace (in docstrings)
    "B904",   # raise from (not critical for CLI errors)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = [
    "B101",  # assert is fine
    "B404",  # subprocess import - required for 1Password CLI
    "B603",  # subprocess without shell - intentional
    "B607",  # partial path - we use 'op' which must be in PATH
]

